external-crates/move/crates/move-compiler/tests/move_check/liveness/vector_loop.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/liveness/vector_loop.move:23:60
   │
14 │     struct User has key, store { id: ID }
   │            ---- To satisfy the constraint, the 'drop' ability would need to be added here
   ·
23 │             user_delete(table::remove(&mut table, user_id(&vector::pop_back(users))));
   │                                                            ^^^^^^^^^^^^^^^^^^^^^^^
   │                                                            │
   │                                                            Invalid usage of undroppable value
   │                                                            The type 'a::m::User' does not have the ability 'drop'
   │                                                            This expression without the 'drop' ability must be used

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/liveness/vector_loop.move:25:9
   │
14 │     struct User has key, store { id: ID }
   │            ---- To satisfy the constraint, the 'drop' ability would need to be added here
   ·
23 │             user_delete(table::remove(&mut table, user_id(&vector::pop_back(users))));
   │                                                            -----------------------
   │                                                            │
   │                                                            The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
   │                                                            The type 'a::m::User' does not have the ability 'drop'
24 │         };
25 │         table::destroy<ID, User>(table)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid return

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/liveness/vector_loop.move:28:41
   │  
14 │       struct User has key, store { id: ID }
   │              ---- To satisfy the constraint, the 'drop' ability would need to be added here
   ·  
28 │       public fun user_delete(_user: User) {
   │                              -----  ---- The type 'a::m::User' does not have the ability 'drop'
   │                              │       
   │                              The parameter '_user' still contains a value. The value does not have the 'drop' ability and must be consumed before the function returns
   │ ╭─────────────────────────────────────────^
29 │ │ 
30 │ │     }
   │ ╰─────^ Invalid return
